<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="Criar Tarefa" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lay_Titulo"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:layout_marginTop="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/t_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_titulo"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lay_Descricao"
        app:layout_constraintTop_toBottomOf="@id/lay_Titulo"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:layout_marginTop="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/t_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_descricao"
            android:layout_width="match_parent"
            android:inputType="textMultiLine"
            android:layout_height="120dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lay_Data"
        app:layout_constraintTop_toBottomOf="@id/lay_Descricao"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toStartOf="@id/lay_Time"
        android:layout_marginTop="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/t_date"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginEnd="16dp"
        app:startIconDrawable="@drawable/ic_data"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_data"
            android:layout_width="match_parent"
            android:inputType="date"
            android:layout_height="wrap_content"
            android:focusable="false"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lay_Time"
        app:layout_constraintTop_toBottomOf="@id/lay_Descricao"
        app:layout_constraintStart_toEndOf="@id/lay_Data"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/t_time"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_time"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_time"
            android:layout_width="match_parent"
            android:inputType="time"
            android:layout_height="wrap_content"
            android:focusable="false"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cmd_add_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:layout_marginBottom="16dp"
        android:text="@string/t_add_task"
        android:textAllCaps="false"
        style="@style/Widget.MaterialComponents.Button"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/cmd_cancel_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/cmd_add_task"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:layout_marginBottom="16dp"
        android:text="@string/t_cancel"
        android:textAllCaps="false"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>